spotify-exporter/exporter.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spotify-exporter
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spotify-exporter
  namespace: spotify-exporter
  labels:
    app.kubernetes.io/name: spotify-exporter
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: spotify-exporter
  template:
    metadata:
      labels:
        app.kubernetes.io/name: spotify-exporter
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      dnsPolicy: Default
      containers:
        - name: spotify-exporter
          image: ghcr.io/nycodeghg/spotify-exporter
          ports:
            - containerPort: 3000
              name: metrics
              protocol: TCP
          resources:
            requests:
              cpu: "50m"
              memory: "50Mi"
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            allowPrivilegeEscalation: false
          volumeMounts:
            - mountPath: /etc/spotify-exporter
              name: config
      volumes:
        - name: config
          configMap:
            name: spotify-exporter
---
apiVersion: v1
kind: Service
metadata:
  name: spotify-exporter
  namespace: spotify-exporter
  labels:
    app.kubernetes.io/name: spotify-exporter
spec:
  selector:
    app.kubernetes.io/name: spotify-exporter
  ports:
    - name: metrics
      protocol: TCP
      port: 80
      targetPort: 3000
